--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,9 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.0",
     "com.unity.collab-proxy": "2.7.1",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.8.1",
     "com.unity.render-pipelines.universal": "17.0.2",
     "com.unity.test-framework": "1.4.3",
     "com.unity.timeline": "1.8.6",
