--- a/Assets/StreamingAssets/question/config.json
+++ b/Assets/StreamingAssets/question/config.json
@@ -4,6 +4,11 @@
         "英语缩写",
         "二次元",
         "乐理",
-        "游戏"
+        "游戏",
+        "计算机",
+        "古典诗词",
+        "历史知识",
+        "数学知识",
+        "地理"
     ]
 }
